--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.1.1",
+    "gulp-less": "^3.3.0",
+    "gulp-less-to-scss": "0.0.9",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.0"
