--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,19 @@
 
-title: My Resume
+title: Resume
 url: 'http://webjeda.com'
 baseurl: '' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
-pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+name: Brad Bazemore
+tagline: Robotics developer that loves web apps
+pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
+email:
 phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+website: bradbazemore.com #do not add http://
+linkedin:
+github: sonyccd
+twitter: '@bwbaze'
 
-
-# Tracker
-analytics: UA-83979019-1
-#Update all the sections by editing the files inside _includes folder.
