--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Resume
 url: 'http://webjeda.com'
-baseurl: '' #change it according to your repository name
+baseurl: ''
 
 
 #Profile information
@@ -11,7 +11,7 @@ pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and pro
 
 #sidebar links
 email:
-phone: 012 345 6789
+phone:
 website: bradbazemore.com #do not add http://
 linkedin:
 github: sonyccd
