--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,7 @@ github: sonyccd
 twitter: '@bwbaze'
 
 #Content
-about: "Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can download this
-free resume/CV template here. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et
-magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu."
+about: ""
 
 experiences:
   - name: "Research Assistant"
