--- a/_config.yml
+++ b/_config.yml
@@ -32,19 +32,19 @@ experiences:
 
   - name: "Research Intern"
     time: "Jun 2014 - Dec 2014"
-    comapny: "Oak Ridge National Laboratory"
+    company: "Oak Ridge National Laboratory"
     description: "Worked in the Computational Data Analytic group solving some of the countries most pressing
     problems of cyber security and power reliability."
 
   - name: "Teaching Assistant"
     time: "May 2012 - May 2014"
-    compnay: "Georgia Southern University"
+    company: "Georgia Southern University"
     description: "Teaching Assistant for the department of Computer Science. This entails grading papers for
     the professors I TA for, supervising labs, and on occasion giving lecture."
 
   - name: "Undergraduate Research Assistant"
     time: "Jan 2012 - May 2014"
-    comapny: "Georgia Southern University"
+    company: "Georgia Southern University"
     description: "Conducted research in the fields of Cyber Physical Systems, High Performance Computing,
     Robotics, and Operating Systems."
 
