--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and pro
 email:
 phone:
 website: bradbazemore.com #do not add http://
-linkedin:
+linkedin: bradfordbazemore
 github: sonyccd
 twitter: '@bwbaze'
 
