--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,11 @@ linkedin: bradfordbazemore
 github: sonyccd
 twitter: '@bwbaze'
 
+education:
+  - degree: "MS in Computer Science"
+    school: "University of Georgia"
+    time: "2015 - 2018"
+
 #Content
 about: ""
 
