--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: '/resume'
 
 #Profile information
 name: Brad Bazemore
-tagline: Robotics developer that loves web apps
+tagline: Robotics and computer vision developer that loves web apps
 pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
