--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ education:
 interests: ["caving", "scuba diving", "running"]
 
 #Content
-about: ""
+about: "Independent and self-motivated developer with experience in IoT, Robotics, Big Data and web app development.
+        Works well in teams and enjoys a stimulating and challenging work environment."
 
 #For each topic below you can add more than one thing. Each entry is divided by the -. For example each entry in the
 #skill is made up of a name and level.
