--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ about: "Independent and self-motivated developer with experience in IoT, Robotic
 #skill is made up of a name and level.
 
 experiences:
-  - name: "Research Assistant"
+  - name: "Developer"
     time: "May 2015 - Now"
     company: "University of Georgia"
     description: "My work is assisting in the development of the robotic technology required to autonomously
