--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 
+# to test set the url to localhost and the base url blank
 title: Resume
-url: 'https://sonyccd.github.io'
-baseurl: '/resume'
+url: 'https://sonyccd.github.io/'
+baseurl: 'resume'
 
 
 #Profile information
@@ -10,7 +11,7 @@ tagline: Robotics and computer vision developer that loves web apps
 pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: bwbazemore AT uga DOT edu
+email: bwbazemore@uga.edu
 phone:
 website: bradbazemore.com #do not add http://
 linkedin: bradfordbazemore
