--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ experiences:
     description: "My work is assisting in the development of the robotic technology required to autonomously
     collect data to monitor crops in a field or orchard."
 
-  - name: "Development Intern"
+  - name: "Software Development Intern"
     time: "Jun 2014 - Dec 2014"
     company: "Oak Ridge National Laboratory"
     description: "Worked in the Computational Data Analytic group solving some of the countries most pressing
