--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ gems:
 
 title: Resume
 # Use for deploy to github
-#url: 'https://sonyccd.github.io'
-#baseurl: '/resume'
+url: 'https://sonyccd.github.io'
+baseurl: '/resume'
 # Use for local testing
-url: 'localhost'
-baseurl:  ''
+#url: 'localhost'
+#baseurl:  ''
 
 #Profile information
 name: Brad Bazemore
@@ -65,27 +65,27 @@ experiences:
 
 projects:
   - name: "Jack-UI"
-    description: "A web based field robot management tool"
+    description: ":spades: A web based field robot management tool"
     link: "https://github.com/sonyccd/jack-ui"
     
   - name: "Resume"
-    description: " :+1: A web resume built with Jekyll and hosted on GitHub. (This thing!)"
+    description: ":briefcase: A web resume built with Jekyll and hosted on GitHub. (This thing!)"
     link: "https://github.com/sonyccd/resume"
 
   - name: "Whitney"
-    description: "Counts cotton bolls from images to estimate crop yield"
+    description: ":jeans: Counts cotton bolls from images to estimate crop yield"
     link: "https://github.com/sonyccd/whitney"
 
   - name: "Red Rover Firmware"
-    description: "ROS Arduino firmware for Red Rover autonomous tractor"
+    description: ":vertical_traffic_light: ROS Arduino firmware for Red Rover autonomous tractor"
     link: "https://github.com/sonyccd/red-rover-firmware"
 
   - name: "Crop Row Follow"
-    description: "ROS node for detecting and following the rows in a row crop"
+    description: ":corn::video_camera::tractor: ROS node for detecting and following the rows in a row crop"
     link: "https://github.com/sonyccd/crop_row_follow"
 
   - name: "Black Fish"
-    description: "Automated malware classification system with spark"
+    description: ":whale2: Automated malware classification system with spark"
     link: "https://github.com/snakes-in-the-box/blk-fish"
 
 skills:
