--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ about: "Independent and self-motivated developer with experience in IoT, Robotic
 
 experiences:
   - name: "Developer"
-    time: "May 2015 - Now"
+    time: "May 2015 - Jun 2017"
     company: "University of Georgia"
     description: "My work is assisting in the development of the robotic technology required to autonomously
     collect data to monitor crops in a field or orchard."
