--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ tagline: Robotics and computer vision developer that loves web apps
 pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: bwbazemore@uga.edu
+email:
 phone:
 website: bradbazemore.com #do not add http://
 linkedin: bradfordbazemore
