--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: '/resume'
 
 #Profile information
 name: Brad Bazemore
-tagline: Go web developer with a love for open source and robotics
+tagline: Go web developer with a love for open source and IoT
 pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
@@ -29,7 +29,7 @@ education:
     school: "Georgia Southern University"
     time: "2010 - 2014"
     
-interests: ["caving", "scuba diving", "running"]
+interests: ["caving", "scuba diving", "running", "rock climbing"]
 
 #Content
 about: "Independent and self-motivated developer with experience in IoT, Robotics, Big Data and web app development.
