--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-uglify": "^2.0.0",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.3",
+    "node-sass": "^4.7.2",
     "snyk": "^1.45.0"
   },
   "snyk": true
