--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 before_install:
   - nvm install stable
   - npm install -g npm@next
+  - npm install -g gulp-cli
   - npm install
 install: gem install jekyll
 script: gulp test
