--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "author": "Brad Bazemore",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0",
     "browser-sync": "^2.18.6",
     "fontawesome": "^4.7.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
-    "gulp-imagemin": "^3.1.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.3",
     "node-sass": "^4.7.2",
+    "popper.js": "^1.12.9",
     "snyk": "^1.45.0"
   },
   "snyk": true
