--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and pro
 #sidebar links
 email:
 phone:
-website: bradbazemore.com #do not add http://
+#website: bradbazemore.com #do not add http://
 linkedin: bradfordbazemore
 github: sonyccd
 twitter: '@bwbaze'
