--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "jpegtran-bin": "^3.2.0",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.3",
     "node-sass": "^4.7.2",
