remove extra dots

--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ skills:
   - name: Go
     level: 80%
    
-  - name: Google Cloud (Datastore, App Engine, etc...)
+  - name: Google Cloud (Datastore, App Engine, etc.)
     level: 50%
     
   - name: Python
