--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ experiences:
     company: "Project Hermes"
     description: "We are monitoring the temperatures of the coastal ocean at depth worldwide in near real-time,
      combining satellite surface temperatures and diver measurements, using sensors ranging from precision 
-     instruments to dive computer profiles. I am the director of the seven person organization creating 
+     instruments to dive computer profiles. I am the director of the seven person non-profit organization creating 
      this cloud and IoT solution."
 
   - name: "Back-End Developer"
